--- a/style.css
+++ b/style.css
@@ -687,5 +687,28 @@ h1, h2, h3, h4, .navbar-brand {
   padding: 50px;
 }
 .marg {
-  margin-top: 13vh;
+ 
+}
+
+.citations {
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+}
+
+.citation {
+    margin-bottom: 1.5rem;
+    padding-left: 2em;
+    text-indent: -2em;
+    line-height: 1.6;
+}
+
+.citation a {
+    color: #0056b3;
+    text-decoration: none;
+}
+
+.citation a:hover {
+    text-decoration: underline;
 }
